--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#A12600</color>
     <color name="colorPrimaryDark">#7D1E00</color>
     <color name="colorAccent">#CE7960</color>
+    <color name="googleColor">#d84535</color>
+    <color name="button_color">#ECE0E0</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00ffffff</color>
+    <color name="semi_transparent">#4d000000</color>
 </resources>
